--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,18 +1,7 @@
-// $basic-black: #000000;
-// $basic-dark: #273238;
-// $basic-semi-light: #696969;
-// $basic-neutral: #b1b3b6;
-// $basic-light: #e9eaeb;
-// $basic-white: #ffffff;
+$color-dark: #1f1f1f;
+$color-white: #fff;
 
-// $special-extra-dark: #386d9b;
-// $special-dark: #3b84bb;
-// $special-dark-10a: rgba(59,132,187, 0.1);
-// $special-semi-dark: #42a0da;
-// $special-neutral: #61afb4;
-// $special-semi-light: #81c36d;
-// $special-light: #afe63a;
-// $special-extra-light: #c6f523;
-
-// $bp-mobile-max: 736px;
-// $bp-mobile-min: $bp-mobile-max + 1px;
+$bp-lg: 1200px;
+$bp-md: 992px;
+$bp-sm: 767px;
+$bp-xs: 576px;
