--- a/src/css/style.css
+++ b/src/css/style.css
@@ -356,10 +356,15 @@ body {
   color: #1f1f1f;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .container {
   max-width: 1200px;
   width: 100%;
-  padding: 0 15px;
+  padding: 0 20px;
   margin: 0 auto;
 }
 
@@ -379,9 +384,9 @@ body {
   border: 0;
   cursor: pointer;
   text-align: center;
-  -webkit-transition: all .3s linear;
-  -o-transition: all .3s linear;
-  transition: all .3s linear;
+  -webkit-transition: color .3s, background-color .3s, opacity .3s;
+  -o-transition: color .3s, background-color .3s, opacity .3s;
+  transition: color .3s, background-color .3s, opacity .3s;
 }
 
 .btn:hover, .btn:focus {
@@ -414,9 +419,9 @@ body {
   border: 3px solid #fff;
   border-radius: 21px;
   padding: 8px 16px;
-  -webkit-transition: all .3s linear;
-  -o-transition: all .3s linear;
-  transition: all .3s linear;
+  -webkit-transition: color .3s, background-color .3s, opacity .3s;
+  -o-transition: color .3s, background-color .3s, opacity .3s;
+  transition: color .3s, background-color .3s, opacity .3s;
 }
 
 .phone__item:hover, .phone__item:focus {
@@ -468,6 +473,38 @@ body {
 
 .burger-menu__inner::after {
   bottom: -10px;
+}
+
+.section {
+  padding: 110px 0;
+}
+
+@media (max-width: 576px) {
+  .section {
+    padding: 90px 0;
+  }
+}
+
+.section__header {
+  margin-bottom: 90px;
+}
+
+.section__title {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 48px;
+  font-weight: 900;
+  text-align: center;
+  margin: 0 auto 40px;
+}
+
+.section__title--accent {
+  color: #ffa650;
+}
+
+@media (max-width: 576px) {
+  .section__title {
+    font-size: 36px;
+  }
 }
 
 .header-page {
@@ -558,9 +595,9 @@ body {
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
   opacity: 0;
-  -webkit-transition: all .3s linear;
-  -o-transition: all .3s linear;
-  transition: all .3s linear;
+  -webkit-transition: color .3s, background-color .3s, opacity .3s;
+  -o-transition: color .3s, background-color .3s, opacity .3s;
+  transition: color .3s, background-color .3s, opacity .3s;
 }
 
 .header-page__link:hover, .header-page__link:focus {
@@ -573,9 +610,9 @@ body {
 
 .header-page__text {
   position: relative;
-  -webkit-transition: all .3s linear;
-  -o-transition: all .3s linear;
-  transition: all .3s linear;
+  -webkit-transition: color .3s linear;
+  -o-transition: color .3s linear;
+  transition: color .3s linear;
 }
 
 @media (max-width: 1200px) {
@@ -681,4 +718,326 @@ body {
   .section-top__title {
     font-size: 34px;
   }
+}
+
+.catalog-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media (max-width: 767px) {
+  .catalog-nav {
+    width: 500px;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+}
+
+.catalog-nav__wrapper {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+@media (max-width: 767px) {
+  .catalog-nav__wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .catalog-nav__item {
+    width: 50%;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+
+.catalog-nav__item:last-of-type .catalog-nav__btn {
+  border-right: 0;
+}
+
+@media (max-width: 767px) {
+  .catalog-nav__item:nth-of-type(1) .catalog-nav__btn,
+  .catalog-nav__item:nth-of-type(2) .catalog-nav__btn {
+    border-top: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .catalog-nav__item:nth-of-type(even) .catalog-nav__btn {
+    border-right: 0;
+  }
+}
+
+.catalog-nav__btn {
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  padding: 14px;
+  min-width: 150px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  font-weight: 900;
+  color: #e6e6e6;
+  border-right: 1px solid #e5e5e5;
+  -webkit-transition: border .3s, background-color .3s, color .3s;
+  -o-transition: border .3s, background-color .3s, color .3s;
+  transition: border .3s, background-color .3s, color .3s;
+}
+
+.catalog-nav__btn.is-active {
+  background-color: #1f1f1f;
+  color: #fff;
+  border-color: #1f1f1f;
+}
+
+.catalog-nav__btn:not(.is-active):hover, .catalog-nav__btn:not(.is-active):focus {
+  background-color: #ffa650;
+  color: #fff;
+  border-right-color: #ffa650;
+}
+
+@media (max-width: 767px) {
+  .catalog-nav__btn {
+    min-width: 0;
+    width: 100%;
+    border-top: 1px solid #e5e5e5;
+  }
+}
+
+.catalog {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 -35px;
+}
+
+@media (max-width: 1250px) {
+  .catalog {
+    margin: 0 -20px;
+  }
+}
+
+.catalog__item {
+  width: calc(100% / 3);
+  margin-bottom: 90px;
+  padding: 0 35px;
+  position: relative;
+}
+
+.catalog__item::before {
+  content: '';
+  background-color: #f7f7f7;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 3px;
+  height: 100%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+@media (max-width: 1250px) {
+  .catalog__item {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media (max-width: 992px) {
+  .catalog__item {
+    width: 50%;
+  }
+}
+
+@media (max-width: 767px) {
+  .catalog__item {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+}
+
+.catalog__item:nth-of-type(3n + 1)::before {
+  content: none;
+}
+
+@media (max-width: 992px) {
+  .catalog__item:nth-of-type(even)::before {
+    content: '';
+  }
+}
+
+@media (max-width: 992px) {
+  .catalog__item:nth-of-type(odd)::before {
+    content: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .catalog__item:nth-of-type(n)::before {
+    content: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .catalog__product {
+    width: 350px;
+    margin: 0 auto;
+    max-width: 100%;
+    border-bottom: 2px solid #f7f7f7;
+    padding-bottom: 50px;
+  }
+}
+
+@media (max-width: 767px) {
+  .catalog__item:last-of-type {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .catalog__item:last-of-type .catalog__product {
+    border-bottom: 0;
+    padding-bottom: 0;
+  }
+}
+
+.product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+
+.product__img {
+  display: block;
+  margin: 0 auto 15px;
+}
+
+.product__content {
+  margin-bottom: 25px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.product__title {
+  margin: 0 0 10px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 22px;
+  font-weight: 900;
+}
+
+.product__description {
+  margin: 0;
+  color: #9f9f9f;
+}
+
+.product__sizes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 30px;
+  border-radius: 21px;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.product__size {
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  color: #e6e6e6;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 900;
+  padding: 13px 33px;
+  border-radius: 21px;
+}
+
+.product__size.is-active {
+  color: #a2a2a2;
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+  .product__size {
+    padding: 13px 25px;
+  }
+}
+
+@media (max-width: 370px) {
+  .product__size {
+    padding: 13px 25px;
+  }
+}
+
+.product__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.product__price {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 22px;
+  line-height: 1.2;
+  font-weight: 900;
+}
+
+@media (max-width: 370px) {
+  .product__price {
+    font-size: 18px;
+  }
+}
+
+.product__btn {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: #ffa650;
+  color: #fff;
+  width: 200px;
+  padding: 14px 20px;
+}
+
+.product__btn:hover {
+  background-color: #ff8c1d;
 }
