--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -9,3 +9,9 @@
         @content;
     }
 }
+
+@mixin media-minmax($min-width, $max-width) {
+    @media (min-width: $min-width + 1) and (max-width: $max-width) {
+        @content;
+    }
+}
