--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -13,7 +13,7 @@
     border: 0;
     cursor: pointer;
     text-align: center;
-    transition: all .3s linear;
+    transition: color .3s, background-color .3s, opacity .3s;
 
     &:hover, &:focus {
         background-color: darken(#ff5441, 5%);
