--- a/src/scss/components/phone.scss
+++ b/src/scss/components/phone.scss
@@ -10,7 +10,7 @@
         border: 3px solid $color-white;
         border-radius: 21px;
         padding: 8px 16px;
-        transition: all .3s linear;
+        transition: color .3s, background-color .3s, opacity .3s;
 
         &:hover, &:focus {
             color: $color-dark;
