--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,3 +31,4 @@ img {
 @import 'modules/header-page.scss';
 @import 'modules/section-top.scss';
 @import 'modules/section-catalog.scss';
+@import 'modules/section.about.scss';
