--- a/src/css/style.css
+++ b/src/css/style.css
@@ -362,8 +362,8 @@ img {
 }
 
 .container {
-  max-width: 1200px;
-  width: 100%;
+  width: 1200px;
+  max-width: 100%;
   padding: 0 20px;
   margin: 0 auto;
 }
@@ -1040,4 +1040,89 @@ img {
 
 .product__btn:hover {
   background-color: #ff8c1d;
+}
+
+.section-about {
+  background: -webkit-gradient(linear, left bottom, left top, from(#2b2b2b), to(#1f1f1f));
+  background: -o-linear-gradient(bottom, #2b2b2b, #1f1f1f);
+  background: linear-gradient(to top, #2b2b2b, #1f1f1f);
+  color: #fff;
+  position: relative;
+}
+
+@media (max-width: 1200px) {
+  .section-about {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+}
+
+.section-about__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (max-width: 767px) {
+  .section-about__img {
+    width: 100%;
+  }
+}
+
+.section-about__container {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 1400px;
+}
+
+@media (max-width: 767px) {
+  .section-about__container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.section-about__content {
+  width: 50%;
+  padding-left: 80px;
+}
+
+@media (max-width: 1200px) {
+  .section-about__content {
+    padding-left: 50px;
+  }
+}
+
+@media (max-width: 767px) {
+  .section-about__content {
+    width: 500px;
+    max-width: 100%;
+    padding-left: 0;
+  }
+}
+
+.section-about__title {
+  text-align: left;
+  margin-bottom: 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 48px;
+  font-weight: 900;
+}
+
+.section-about__text {
+  margin: 0;
+  font-size: 18px;
+  line-height: 1.67;
+  font-weight: 300;
+  color: #ffffff;
 }
