--- a/src/scss/components/container.scss
+++ b/src/scss/components/container.scss
@@ -1,6 +1,6 @@
 .container {
-    max-width: 1200px;
-    width: 100%;
+    width: 1200px;
+    max-width: 100%;
     padding: 0 20px;
     margin: 0 auto;
 }
