--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,8 +27,11 @@ img {
 @import 'components/phone.scss';
 @import 'components/burger-menu.scss';
 @import 'components/section.scss';
+@import 'components/socials.scss';
 
 @import 'modules/header-page.scss';
 @import 'modules/section-top.scss';
 @import 'modules/section-catalog.scss';
 @import 'modules/section.about.scss';
+@import 'modules/section-contacts.scss';
+@import 'modules/footer-page.scss';
