--- a/src/css/style.css
+++ b/src/css/style.css
@@ -369,8 +369,8 @@ img {
 }
 
 .btn {
-  max-width: 240px;
-  width: 100%;
+  width: 240px;
+  max-width: 100%;
   background-color: #ff5441;
   -webkit-box-shadow: 0px 0px 38px 0px rgba(212, 66, 50, 0.8);
           box-shadow: 0px 0px 38px 0px rgba(212, 66, 50, 0.8);
@@ -403,7 +403,7 @@ img {
 @media (max-width: 576px) {
   .btn {
     font-size: 16px;
-    max-width: 220px;
+    width: 220px;
     padding: 16px 60px;
   }
 }
@@ -431,6 +431,16 @@ img {
 
 .phone__item:active {
   opacity: 0.8;
+}
+
+.phone__item--accent {
+  border-color: #ffa650;
+  color: #ffa650;
+}
+
+.phone__item--accent:hover, .phone__item--accent:focus {
+  color: #fff;
+  background-color: #ffa650;
 }
 
 .burger-menu {
@@ -475,6 +485,24 @@ img {
   bottom: -10px;
 }
 
+.page-title {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 48px;
+  font-weight: 900;
+  text-align: center;
+  margin: 0 auto 40px;
+}
+
+.page-title--accent {
+  color: #ffa650;
+}
+
+@media (max-width: 576px) {
+  .page-title {
+    font-size: 36px;
+  }
+}
+
 .section {
   padding: 110px 0;
 }
@@ -492,24 +520,6 @@ img {
 @media (max-width: 576px) {
   .section__header {
     margin-bottom: 70px;
-  }
-}
-
-.section__title {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 48px;
-  font-weight: 900;
-  text-align: center;
-  margin: 0 auto 40px;
-}
-
-.section__title--accent {
-  color: #ffa650;
-}
-
-@media (max-width: 576px) {
-  .section__title {
-    font-size: 36px;
   }
 }
 
@@ -571,6 +581,271 @@ img {
 
 .socials__logo {
   fill: #fff;
+}
+
+.btn-close {
+  position: relative;
+  border: 0;
+  cursor: pointer;
+  background: none;
+  padding: 0;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  -webkit-transition: opacity .3s, -webkit-transform .3s;
+  transition: opacity .3s, -webkit-transform .3s;
+  -o-transition: transform .3s, opacity .3s;
+  transition: transform .3s, opacity .3s;
+  transition: transform .3s, opacity .3s, -webkit-transform .3s;
+}
+
+.btn-close::before, .btn-close::after {
+  content: '';
+  background-color: #d2d2d2;
+  height: 40px;
+  width: 3px;
+  position: absolute;
+  border-radius: 10px;
+  top: 50%;
+}
+
+.btn-close::before {
+  -webkit-transform: translateY(-50%) rotate(45deg);
+      -ms-transform: translateY(-50%) rotate(45deg);
+          transform: translateY(-50%) rotate(45deg);
+}
+
+.btn-close::after {
+  -webkit-transform: translateY(-50%) rotate(-45deg);
+      -ms-transform: translateY(-50%) rotate(-45deg);
+          transform: translateY(-50%) rotate(-45deg);
+}
+
+.btn-close:hover, .btn-close:focus {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.btn-close:active {
+  -webkit-transform: scale(0.9);
+      -ms-transform: scale(0.9);
+          transform: scale(0.9);
+  opacity: 0.8;
+}
+
+.popup {
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.popup.is-active {
+  pointer-events: auto;
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup__wrapper {
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+
+.popup__inner {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 50px 0;
+}
+
+@media (max-width: 767px) {
+  .popup__inner {
+    padding: 0;
+  }
+}
+
+.popup__content {
+  background-color: #fff;
+  padding: 70px 20px;
+  max-width: 730px;
+  margin: 0 auto;
+  position: relative;
+  border-radius: 20px;
+}
+
+@media (max-width: 767px) {
+  .popup__content {
+    max-width: 100%;
+    border-radius: 0;
+    height: 100%;
+    padding-top: 100px;
+  }
+}
+
+.popup__content--fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.popup__content--centered {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.popup__btn-close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.popup__title {
+  margin-bottom: 20px;
+}
+
+.popup__subtitle {
+  margin: 0;
+  text-align: center;
+  font-size: 24px;
+}
+
+@media (max-width: 576px) {
+  .popup__subtitle {
+    font-size: 18px;
+  }
+}
+
+.popup__subtitle--order {
+  margin: 0 auto 40px;
+  max-width: 360px;
+}
+
+@media (max-width: 576px) {
+  .popup__subtitle--order {
+    max-width: 260px;
+  }
+}
+
+.popup__mobile-menu {
+  margin-bottom: 30px;
+}
+
+.popup__phone {
+  margin-bottom: 30px;
+}
+
+.popup__link {
+  text-decoration: none;
+  color: inherit;
+  white-space: nowrap;
+}
+
+.mobile-menu {
+  width: 100%;
+}
+
+.mobile-menu__ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.mobile-menu__link {
+  display: block;
+  text-decoration: none;
+  padding: 20px 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
+  color: inherit;
+  font-weight: 900;
+  text-align: center;
+  -webkit-transition: background-color .2s, color .2s, opacity .2s;
+  -o-transition: background-color .2s, color .2s, opacity .2s;
+  transition: background-color .2s, color .2s, opacity .2s;
+}
+
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  background-color: #ffa650;
+  color: #fff;
+}
+
+.mobile-menu__link:active {
+  opacity: 0.8;
+}
+
+@media (max-width: 767px) {
+  .mobile-menu__link {
+    font-size: 20px;
+  }
+}
+
+.order {
+  max-width: 310px;
+  margin: 0 auto;
+}
+
+.order__img {
+  width: 186px;
+  display: block;
+  margin: 0 auto 10px;
+}
+
+.order__title {
+  margin: 0 0 5px;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+}
+
+.order__size {
+  margin: 0 auto 30px;
+  color: #a2a2a2;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  text-align: center;
+}
+
+.form__input {
+  display: block;
+  width: 100%;
+  padding: 20px 28px;
+  background: #f7f7f7;
+  border-radius: 32px;
+  margin-bottom: 8px;
+  border: 2px solid transparent;
+  outline: none;
+}
+
+.form__input:focus {
+  border-color: #ffa650;
+}
+
+.form__btn {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  width: 100%;
+  background: #ffa650;
+  padding: 22px 28px;
+  border-radius: 50px;
+}
+
+.form__btn:hover, .form__btn:focus {
+  background-color: #ff9937;
 }
 
 .header-page {
