--- a/src/css/style.css
+++ b/src/css/style.css
@@ -361,6 +361,10 @@ img {
   height: auto;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .container {
   width: 1200px;
   max-width: 100%;
@@ -849,7 +853,7 @@ img {
 }
 
 .header-page {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -857,6 +861,11 @@ img {
   background-color: rgba(11, 20, 25, 0.9);
   padding: 9px 0;
   overflow: hidden;
+}
+
+.header-page.is-active .header-page__link {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 @media (max-width: 992px) {
@@ -915,6 +924,9 @@ img {
   padding: 15px 30px;
   text-decoration: none;
   position: relative;
+  -webkit-transition: padding .4s;
+  -o-transition: padding .4s;
+  transition: padding .4s;
 }
 
 @media (max-width: 1200px) {
