--- a/src/scss/modules/header-page.scss
+++ b/src/scss/modules/header-page.scss
@@ -1,5 +1,5 @@
 .header-page {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -7,6 +7,11 @@
     background-color: rgba($color: #0b1419, $alpha: .9);
     padding: 9px 0;
     overflow: hidden;
+
+    &.is-active &__link{
+        padding-top: 0;
+        padding-bottom: 0;
+    }
 
     @include media-max($bp-md) {
         padding: 5px 0;
@@ -51,6 +56,7 @@
         padding: 15px 30px;
         text-decoration: none;
         position: relative; 
+        transition: padding .4s;
 
         @include media-max($bp-lg) {
             font-size: 16px;
