--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,10 @@ img {
     height: auto;
 }
 
+.no-scroll {
+    overflow: hidden;
+}
+
 @import 'components/container.scss';
 @import 'components/btn.scss';
 @import 'components/phone.scss';
