--- a/src/scss/modules/section-top.scss
+++ b/src/scss/modules/section-top.scss
@@ -1,7 +1,7 @@
 .section-top {
     height: 100vh;
     min-height: 600px;
-    background: #0e1419 url(../../img/section-top/header__bg-img.jpg);
+    background: #0e1419;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
