--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,6 +31,7 @@ img {
   }
 
 @import 'components/container.scss';
+@import 'components/logo.scss';
 @import 'components/btn.scss';
 @import 'components/phone.scss';
 @import 'components/burger-menu.scss';
