--- a/src/css/style.css
+++ b/src/css/style.css
@@ -698,7 +698,7 @@ img {
   .popup__content {
     max-width: 100%;
     border-radius: 0;
-    height: 100%;
+    min-height: 100vh;
     padding-top: 100px;
   }
 }
@@ -1041,8 +1041,9 @@ img {
 
 .section-top__container {
   position: relative;
-  max-width: 520px;
-  width: 100%;
+  width: 520px;
+  max-width: 100%;
+  margin: 0;
 }
 
 .section-top__info {
