--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -44,7 +44,7 @@
         @include media-max($bp-sm) {
             max-width: 100%;
             border-radius: 0;
-            height: 100%;
+            min-height: 100vh;
             padding-top: 100px;
         }
 
