--- a/src/scss/modules/section-top.scss
+++ b/src/scss/modules/section-top.scss
@@ -29,8 +29,9 @@
 
     &__container {
         position: relative;
-        max-width: 520px;
-        width: 100%;
+        width: 520px;
+        max-width: 100%;
+        margin: 0;
     }
 
     &__info {
